-- started implementing messaging chat facility